case 3256 - Out of bound fix

--- a/css/slagbib-theme-global.css
+++ b/css/slagbib-theme-global.css
@@ -73,6 +73,12 @@ h2 {
   width: 445px;
 }
 
+.responsive-layout-mobile .site-name-slogan .site-name a {
+  background: none;
+  text-indent: 0;
+  width: auto;
+}
+
 /* Color settings */
 
 .block-ding-library-library-address {
